--- a/project/vkumar/Rahohealthy/pom.xml
+++ b/project/vkumar/Rahohealthy/pom.xml
@@ -25,6 +25,7 @@
 		<version>${org.springframework.version}</version>
 	</dependency>
 	<dependency>
+	    
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-web</artifactId>
 		<version>${org.springframework.version}</version>
@@ -39,10 +40,33 @@
 		<artifactId>spring-jdbc</artifactId>
 		<version>${org.springframework.version}</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-orm</artifactId>
 		<version>${org.springframework.version}</version>
+	</dependency>
+	
+	<!-- Spring Security -->
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-core</artifactId>
+		<version>3.1.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>3.1.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>3.1.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-taglibs</artifactId>
+		<version>3.1.3.RELEASE</version>
 	</dependency>
 	
 	<!-- Hibernate resources -->
