--- a/project/vkumar/Rahohealthy/pom.xml
+++ b/project/vkumar/Rahohealthy/pom.xml
@@ -5,7 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <properties>
-	<org.springframework.version>4.2.0.RELEASE</org.springframework.version>		
+	<org.springframework.version>4.2.0.RELEASE</org.springframework.version>	
+	<springsecurity.version>4.0.1.RELEASE</springsecurity.version>	
   </properties>
   
   <dependencies>
@@ -51,22 +52,22 @@
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-core</artifactId>
-		<version>3.1.3.RELEASE</version>
+		<version>${springsecurity.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-web</artifactId>
-		<version>3.1.3.RELEASE</version>
+		<version>${springsecurity.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-config</artifactId>
-		<version>3.1.3.RELEASE</version>
+		<version>${springsecurity.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-taglibs</artifactId>
-		<version>3.1.3.RELEASE</version>
+		<version>${springsecurity.version}</version>
 	</dependency>
 	
 	<!-- Hibernate resources -->
