--- a/project/vkumar/Rahohealthy/pom.xml
+++ b/project/vkumar/Rahohealthy/pom.xml
@@ -4,9 +4,9 @@
   <artifactId>Rahohealthy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+ 
   <properties>
-	<org.springframework.version>4.2.0.RELEASE</org.springframework.version>	
-	<springsecurity.version>4.0.1.RELEASE</springsecurity.version>	
+	<org.springframework.version>3.0.7.RELEASE</org.springframework.version>		
   </properties>
   
   <dependencies>
@@ -26,7 +26,6 @@
 		<version>${org.springframework.version}</version>
 	</dependency>
 	<dependency>
-	    
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-web</artifactId>
 		<version>${org.springframework.version}</version>
@@ -41,7 +40,6 @@
 		<artifactId>spring-jdbc</artifactId>
 		<version>${org.springframework.version}</version>
 	</dependency>
-	
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-orm</artifactId>
@@ -52,22 +50,22 @@
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-core</artifactId>
-		<version>${springsecurity.version}</version>
+		<version>3.1.3.RELEASE</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-web</artifactId>
-		<version>${springsecurity.version}</version>
+		<version>3.1.3.RELEASE</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-config</artifactId>
-		<version>${springsecurity.version}</version>
+		<version>3.1.3.RELEASE</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-taglibs</artifactId>
-		<version>${springsecurity.version}</version>
+		<version>3.1.3.RELEASE</version>
 	</dependency>
 	
 	<!-- Hibernate resources -->
@@ -104,30 +102,20 @@
 	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>jstl</artifactId>
-		<version>1.2</version>
+		<version>1.1.2</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-dbcp</groupId>
 		<artifactId>commons-dbcp</artifactId>
 		<version>20030825.184428</version>
 	</dependency>
-	<dependency> 
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-io</artifactId> 
-  		<version>1.3.2</version> 
-	</dependency> 
 	<dependency>
 		<groupId>commons-pool</groupId>
 		<artifactId>commons-pool</artifactId>
 		<version>20030825.183949</version>
 	</dependency>
-	<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
-		</dependency>
 	<!-- MySQL -->
-	<dependency>	    
+	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.6</version>
@@ -137,14 +125,21 @@
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
 		<version>1.2.14</version>
-		<type>jar</type>
-		<scope>compile</scope>
+		<type>jar</type>		
 	</dependency>
+	
 </dependencies>
+  
   
   <build>
     <testSourceDirectory>src/main/test</testSourceDirectory>
     <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
       <resource>
         <directory>src/main/webapp</directory>
         <excludes>
@@ -155,17 +150,10 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>2.3.2</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
     </plugins>
