--- a/project/vkumar/Rahohealthy/src/main/webapp/WEB-INF/web.xml
+++ b/project/vkumar/Rahohealthy/src/main/webapp/WEB-INF/web.xml
@@ -12,25 +12,34 @@
 	        /WEB-INF/security-context.xml
 	    </param-value>
 	</context-param>
-  
+    <listener>
+	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>	
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 	
+	<!-- Define a filter to enable Spring Security, be sure to use the suggested name 'springSecurityFilterChain' -->
+	<filter>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
 
+	
+	
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
-	
 	<servlet-mapping>
-        <servlet-name>spring</servlet-name>
-        <url-pattern>/searchresult.jsp</url-pattern>
-        <url-pattern>/searchresult.html</url-pattern>
-        <url-pattern>*.html</url-pattern>
-    </servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
   
   <welcome-file-list>
     <welcome-file>Home.jsp</welcome-file>
