--- a/project/vkumar/Rahohealthy/src/main/webapp/WEB-INF/web.xml
+++ b/project/vkumar/Rahohealthy/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
 	        /WEB-INF/security-context.xml
 	    </param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>uniqueAppRootNamee</param-value>
+	</context-param>
     <listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>	
